Se añade la configuración basica

--- a/app.config
+++ b/app.config
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="windowsService" type="GestorDeErrores.Proxy.Configuration.ConfigurationService, GestorDeErrores.Proxy, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" allowLocation="true" allowDefinition="Everywhere" />
+  </configSections>
+
+ <windowsService>
+    <endpoints>
+      <add name="ServicioProductos" address="http://localhost:8080/Productos/ProductRepository.svc"/>
+    </endpoints>
+  </windowsService>
+  
     <system.serviceModel>
         <bindings />
         <client />
